# E-Commerce-Intelligence-Platform-ECIP-

./: .gitignore  CLAUDE.md  Dockerfile  HANDOFF.md  README.md  docker-compose.dev.yml  docker-compose.yml  dvc.yaml  pyproject.toml
.dvc/: config
.github/workflows/: ci.yml  model_retrain.yml
api/: main.py
api/middleware/: auth.py
api/routers/: analytics.py  drift.py  explain.py  products.py  retention.py  review_queue.py  sentiment.py
api/schemas/: explain.py
api/storage/: image_store.py
api/workers/: celery_tasks.py
dashboard/: .env.local.example  README.md  package-lock.json
dashboard/app/: layout.tsx  page.tsx
dashboard/app/drift/: page.tsx
dashboard/app/products/: page.tsx
dashboard/app/retention/: page.tsx
dashboard/app/review-queue/: page.tsx
dashboard/app/sentiment/: page.tsx
dashboard/components/: KpiCard.tsx  RoiEstimator.tsx  StatusStates.tsx
dashboard/lib/: api.ts
data/pipelines/: image_pipeline.py  tabular_pipeline.py  text_pipeline.py
data/scripts/: create_api_key.py  download.py  download_fullres_fashion_subset.py  synthesize_demo_sentiment.py  verify_access.py
data/validation/: setup_ge.py
data/validation/great_expectations/: great_expectations.yml
db/: schema.sql
docs/: deployment_guide.md
docs/decisions/: ADR-001-churn-label.md
ecip.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
mlops/: beat_schedule.py  drift_detector.py  optuna_search.py  promotion_gate.py
mlops/artifacts/: best_retention_params.json
mlruns/: mlflow.db
models/product/: baseline_resnet18.py  evaluate.py  gradcam.py  model_card.md  train.py
models/retention/: calibrate.py  churn_label_engineer.py  model_card.md  shap_explain.py  train.py
models/sentiment/: absa_pipeline.py  evaluate.py  finetune.py  model_card.md  setfit_baseline.py
observability/alertmanager/: rules.yml
observability/prometheus/: metrics.py  prometheus.yml
tests/integration/: test_api.py
tests/load/: product_slo.js  retention_slo.js  sentiment_slo.js
tests/model_tests/: test_cross_module.py
tests/unit/: test_churn_label_engineer.py  test_image_pipeline.py  test_tabular_pipeline.py  test_text_pipeline.py
(+7 files in other folders)
