[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ecip"
version = "3.0.0"
description = "E-Commerce Intelligence Platform — Production ML System"
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.2",
    "scikit-learn>=1.4",
    "scipy>=1.12",
    "joblib>=1.3",
    "pyarrow>=15.0",
    "python-dotenv>=1.0",
    "pydantic>=2.6",
    "httpx>=0.27",
    "loguru>=0.7",
]

[project.optional-dependencies]
train = [
    "torch>=2.2",
    "torchvision>=0.17",
    "timm>=0.9",
    "transformers>=4.39",
    "datasets>=2.18",
    "setfit>=1.0",
    "xgboost>=2.0",
    "lightgbm>=4.3",
    "imbalanced-learn>=0.12",
    "shap>=0.44",
    "matplotlib>=3.8",
    "grad-cam>=1.5",
    "optuna>=3.6",
    "mlflow>=2.12",
    "great-expectations>=0.18",
    "dvc>=3.49",
    "openpyxl>=3.1",
]
api = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.28",
    "python-multipart>=0.0.9",
    "celery[redis]>=5.3",
    "redis>=5.0",
    "asyncpg>=0.29",
    "bcrypt>=4.1",
    "prometheus-client>=0.20",
    "pillow>=10",
    "torch>=2.2",
    "torchvision>=0.17",
    "timm>=0.9",
    "transformers>=4.39",
    "xgboost>=2.0",
    "lightgbm>=4.3",
    "shap>=0.44",
    "mlflow>=2.12",
]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5",
    "pytest-timeout>=2.3",
    "httpx>=0.27",
    "ruff>=0.3",
    "mypy>=1.9",
    "pre-commit>=3.7",
    "optuna>=3.6",
    "mlflow>=2.12",
    "great-expectations>=0.18",
    "dvc>=3.49",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["data*", "models*", "mlops*", "api*", "observability*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
explicit_package_bases = true
mypy_path = "."

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]